Modal z-index fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -383,7 +383,7 @@ tr:nth-child(even) {
 .modal {
   display: none;
   position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  z-index: 99; /* Sit on top */
   left: 0;
   top: 0;
   width: 100%;
